force-app/main/default/objects/Grille_remuneration__mdt/Grille_remuneration__mdt.object-meta.xml
<CustomObject>
    <label>Grille_remuneration</label>
    <pluralLabel>Grilles remuneration</pluralLabel>
</CustomObject>