force-app/main/default/objects/Grille_remuneration__mdt/fields/Conso_Max__c.field-meta.xml
<CustomField>
    <fullName>Conso_Max__c</fullName>
    <label>Conso Max</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>