force-app/main/default/objects/Grille_remuneration__mdt/fields/Conso_Min__c.field-meta.xml
<CustomField>
    <fullName>Conso_Min__c</fullName>
    <label>Conso Min</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>