force-app/main/default/objects/Grille_remuneration__mdt/fields/Duree_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Duree_Engagement__c</fullName>
    <label>Duree d&apos;engagement</label>
    <length>4</length>
    <type>Text</type>
</CustomField>