force-app/main/default/objects/Grille_remuneration__mdt/fields/Fournisseur__c.field-meta.xml
<CustomField>
    <fullName>Fournisseur__c</fullName>
    <label>Fournisseur</label>
    <length>50</length>
    <type>Text</type>
</CustomField>