force-app/main/default/objects/Grille_remuneration__mdt/fields/FTA__c.field-meta.xml
<CustomField>
    <fullName>FTA__c</fullName>
    <label>FTA</label>
    <length>10</length>
    <type>Text</type>
</CustomField>