force-app/main/default/objects/Grille_remuneration__mdt/fields/Puissance_Souscrite__c.field-meta.xml
<CustomField>
    <fullName>Puissance_Souscrite__c</fullName>
    <label>Puissance Souscrite</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>