force-app/main/default/objects/Grille_remuneration__mdt/fields/Remuneration__c.field-meta.xml
<CustomField>
    <fullName>Remuneration__c</fullName>
    <label>Rémunération</label>
    <precision>7</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>