force-app/main/default/objects/Grille_remuneration__mdt/fields/Type_Energie__c.field-meta.xml
<CustomField>
    <fullName>Type_Energie__c</fullName>
    <label>Type d&apos;énergie</label>
    <length>10</length>
    <type>Text</type>
</CustomField>